# appwrite-rust-playground

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  appwrite.config.json  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
resources/: sample-upload.txt
resources/functions/hello-node/: index.js  package.json
src/: main.rs
