[package]
name = "appwrite-rust-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
appwrite = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
reqwest = { version = "0.13.2", default-features = false }
